# service_box

./: Cargo.toml  codebook.toml  flake.nix  live_route_proto.md  readme.md  rustfmt.toml
crate/arktype_ast/: Cargo.toml
crate/arktype_ast/src/: lib.rs
crate/arktype_ast_macros/: Cargo.toml
crate/arktype_ast_macros/src/: lib.rs  schema.rs  type_parser.rs
crate/arktype_ast_test/: Cargo.toml
crate/arktype_ast_test/src/: lib.rs
crate/cfg/: Cargo.toml
crate/cfg/src/: lib.rs
crate/errx/: Cargo.toml
crate/errx/src/: external.rs  lib.rs
crate/pg/: Cargo.toml
crate/pg/src/: lib.rs
crate/rpc/: Cargo.toml
crate/rpc/src/: lib.rs  server.rs
crate/rpc_attr/: Cargo.toml
crate/rpc_attr/src/: lib.rs
crate/rpc_test/: Cargo.toml
crate/rpc_test/bindings/: rpc_test_rpc.gen.ts
crate/rpc_test/src/: lib.rs
crate/sf/: Cargo.toml
crate/sf/src/: lib.rs
crate/tracing_provider/: Cargo.toml
crate/tracing_provider/src/: error_context.rs  lib.rs  subscriber.rs
crate/tracing_provider/tests/: axiom_integration.rs
