[package]
name = "errx"
edition = "2024"
version.workspace = true

[features]
pg = ["dep:pg", "dep:tokio-postgres"]
sf = ["dep:sf"]

[dependencies]
pg = { workspace = true, optional = true}
sf = { workspace = true, optional = true}
tracing_provider = { workspace = true }

thiserror = "2.0.18"
tracing = "0.1.44"
axum = { version = "0.8.8" }
serde = { version = "1.0.228", features = ["derive"] }
tokio-postgres = { version = "0.7.16", optional = true }
tokio = { version = "1.49.0", features = ["rt", "sync"] }
uuid = { version = "1.20.0", features = ["v7"] }
