[package]
name = "rpc"
edition = "2024"
version.workspace = true

[features]
default = []
bindings = []
service = ["dep:errx"]

[dependencies]
errx = { workspace = true, optional = true }
arktype_ast = { workspace = true }
rpc_attr = { workspace = true }
axum = "0.8.8"
inventory = "0.3.21"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["signal"] }
tower-http = { version = "0.6.8", features = ["request-id"] }
uuid = { version = "1.20.0", features = ["v7"] }
