[package]
name = "rpc_test"
edition = "2024"
version = "0.0.0"
publish = false

[features]
default = ["bindings", "service"]
bindings = ["rpc/bindings"]
service = ["rpc/service"]

[dependencies]
rpc = { path = "../rpc" }
arktype_ast = { workspace = true }
errx = { path = "../errx" }
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.8"
inventory = "0.3.21"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
